--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bignumber": "^1.1.0",
+    "dotenv": "^8.2.0",
+    "ethers": "^5.1.4",
     "secretjs": "^0.11.0",
-    "web3": "^1.3.5",
-    "dotenv": "^8.2.0"
+    "web3": "^1.3.5"
   }
 }
